--- a/NippySort/NippySort.fsproj
+++ b/NippySort/NippySort.fsproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="NippySort.fs" />
   </ItemGroup>
 
   <ItemGroup>
