Initial implementation of NiftySort

--- a/NippySort.Test/NippySort.Test.fsproj
+++ b/NippySort.Test/NippySort.Test.fsproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Compile Include="TestNippySort.fs" />
+    <Compile Include="TestNiftySort.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
